--- a/schober-enzo/index.html
+++ b/schober-enzo/index.html
@@ -6,6 +6,7 @@
   <p><em>My Business Card</em></p>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+<link href="style.css" rel="stylesheet" />
 
 </style>   
     
